--- a/src/Foundation/LinkEnhancements/code/Foundation.LinkEnhancements.csproj
+++ b/src/Foundation/LinkEnhancements/code/Foundation.LinkEnhancements.csproj
@@ -77,8 +77,29 @@
     <Reference Include="RazorGenerator.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\RazorGenerator.Mvc.2.4.9\lib\net40\RazorGenerator.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="Sitecore.Abstractions, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Abstractions.8.2.180406\lib\NET452\Sitecore.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.Analytics, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Analytics.8.2.180406\lib\NET452\Sitecore.Analytics.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.Analytics.Core, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Analytics.Core.8.2.180406\lib\NET452\Sitecore.Analytics.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.Analytics.DataAccess, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Analytics.DataAccess.8.2.180406\lib\NET452\Sitecore.Analytics.DataAccess.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.Analytics.Model, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Analytics.Model.8.2.180406\lib\NET452\Sitecore.Analytics.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.Analytics.Processing, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Analytics.Processing.8.2.180406\lib\NET452\Sitecore.Analytics.Processing.dll</HintPath>
+    </Reference>
     <Reference Include="Sitecore.Client, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Sitecore.Client.8.2.180406\lib\NET452\Sitecore.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.ExperienceEditor, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.ExperienceEditor.8.2.180406\lib\NET452\Sitecore.ExperienceEditor.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.Kernel, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Sitecore.Kernel.NoReferences.8.2.180406\lib\NET452\Sitecore.Kernel.dll</HintPath>
@@ -88,6 +109,15 @@
     </Reference>
     <Reference Include="Sitecore.Logging.Client, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Sitecore.Logging.Client.8.2.180406\lib\NET452\Sitecore.Logging.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.Marketing, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Marketing.8.2.180406\lib\NET452\Sitecore.Marketing.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.Marketing.Core, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Marketing.Core.8.2.180406\lib\NET452\Sitecore.Marketing.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.Marketing.Taxonomy, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Marketing.Taxonomy.8.2.180406\lib\NET452\Sitecore.Marketing.Taxonomy.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.Mvc, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Sitecore.Mvc.8.2.180406\lib\NET452\Sitecore.Mvc.dll</HintPath>
@@ -100,6 +130,9 @@
     </Reference>
     <Reference Include="Sitecore.Speak.Client, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Sitecore.Speak.Client.8.2.180406\lib\NET452\Sitecore.Speak.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Sitecore.Xdb.Client, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Sitecore.Xdb.Client.8.2.180406\lib\NET452\Sitecore.Xdb.Client.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.Xdb.Configuration, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Sitecore.Xdb.Configuration.8.2.180406\lib\NET452\Sitecore.Xdb.Configuration.dll</HintPath>
@@ -161,6 +194,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\Foundation\Foundation.LinkEnhancements.UltraLinks.config" />
+    <Content Include="sitecore\shell\Applications\Dialogs\UltraLink\UltraLink.css" />
+    <Content Include="sitecore\shell\Applications\Dialogs\UltraLink\UltraLink.js" />
+    <Content Include="sitecore\shell\Applications\Dialogs\UltraLink\UltraLink.xml" />
     <Content Include="sitecore\shell\client\Applications\Dialogs\InsertUltraLinkViaTreeDialog.js" />
     <Content Include="sitecore\shell\client\Speak\Layouts\Renderings\Data\UltraLinksDataSources\ultralinksdatasource.js" />
     <Content Include="sitecore\shell\client\Speak\Layouts\Renderings\Data\UltraLinksDataSources\UltraLinksDataSource.cshtml" />
@@ -171,6 +207,8 @@
     <Compile Include="CustomControls\ContentEditor\UltraLink.cs" />
     <Compile Include="CustomFields\UltraLinkField.cs" />
     <Compile Include="Dialogs\InsertUltraLinkViaTreeDialog.cs" />
+    <Compile Include="ExperienceEditor\Commands\EditUltraLink.cs" />
+    <Compile Include="ExperienceEditor\Dialogs\UltraLink\UltraLinkForm.cs" />
     <Compile Include="Pipelines\Processors\RenderField\GetUltraLinkFieldValue.cs" />
     <Compile Include="Mvc\Helpers\UltraLinkHelper.cs" />
     <Compile Include="Mvc\Html\UltraLinkExtensions.cs" />
@@ -193,7 +231,9 @@
       <DependentUpon>web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Dialogs\SheerUI\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
