--- a/src/Foundation/LinkEnhancements/code/packages.config
+++ b/src/Foundation/LinkEnhancements/code/packages.config
@@ -15,16 +15,27 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net46" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
+  <package id="Sitecore.Abstractions" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Analytics" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Analytics.Core" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Analytics.DataAccess" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Analytics.Model" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Analytics.Processing" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Client" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.ExperienceEditor" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Kernel" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Kernel.NoReferences" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Logging" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Logging.Client" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Marketing" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Marketing.Core" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Marketing.Taxonomy" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Mvc" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Mvc.NoReferences" version="8.2.170728" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.NVelocity" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Speak.Applications" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Speak.Client" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
+  <package id="Sitecore.Xdb.Client" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Xdb.Configuration" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="Sitecore.Zip" version="8.2.180406" targetFramework="net46" developmentDependency="true" />
   <package id="System.Collections" version="4.0.11" targetFramework="net46" />
